# ESOS_SPIKE

./: .env.template  .gitignore  LICENCE  README.md  custom_repo_describe.sh  custom_repo_describe_generic.sh  dashboard.py  esos_toolkit_dashboard.py  pyproject.toml
docs/: Method.md
esos_spike/: enhance.py  parse.py  utils.py
esos_spike/llm_static_files/: mock_response.json  questions.json
layouts/: dashboard.grid.json
