[tool.poetry]
name = "esos-spike"
version = "0.1.0"
description = ""
authors = ["Rory Scott <rory.scott@paconsulting.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.14.2"
tika = "^2.6.0"
tiktoken = "^0.6.0"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
