[tool.poetry]
name = "esos-spike"
version = "0.1.0"
description = ""
authors = ["Rory Scott <rory.scott@paconsulting.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.14.2"
tika = "^2.6.0"
tiktoken = "^0.6.0"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"
marimo = "^0.3.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
altair = "^5.2.0"
pylint = "^3.1.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
